--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Znieczu</title>
+    <link rel="icon" href="src/assets/znieczu-logo.png"/>
   </head>
   <body>
     <div id="app"></div>
