--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Znieczu</title>
-    <link rel="icon" href="src/assets/znieczu-logo.png"/>
   </head>
   <body>
     <div id="app"></div>
